Add Heroku address

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+The site address is https://vast-retreat-2673.herokuapp.com/
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
